--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@
       <div class="container">
         <ul>
           <li><a href="{{ site.url }}/blog" class="backToBlog">Back to overview</a></li>
-          <li><div itemprop="datePublished" datetime="{{ page.date }}">{{ page.date | date_to_string }}</div></li>
+          <li><div itemprop="datePublished" datetime="{{ page.date }}">{{ page.date | date: "%-d %B %Y" }}</div></li>
           <li>
             <div>
             {% if site.readtime %}
