--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,7 +4,8 @@
  * @Author Volker Otto <hello@volkerotto.net>
  * @Year 2014
  */
-//@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
+
+@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 
 @import 'vendor/normalize';
 
