--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
               <a href="http://linkedin.com/profile/view?id={{site.me.linkedin}}"><i class="fa fa-linkedin"></i></a>
             </div><!-- .social -->
 
-            <p class="copyright">Copyright &copy; 2014 Volker Otto</p>
+            <p class="copyright">Copyright &copy; 2014-2021 Volker Otto</p>
           </aside>
         </div>
       </div>
@@ -49,7 +49,9 @@
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='//www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create', 'UA-11611534-7', 'volkerotto.net');ga('send','pageview');
+      ga('create', 'UA-11611534-7', 'volkerotto.net');
+      ga('set', 'anonymizeIp', true);
+      ga('send','pageview');
   </script>
 
 </body>
