--- a/assets/scss/basic/_html.scss
+++ b/assets/scss/basic/_html.scss
@@ -12,7 +12,7 @@ html{
 body{
   color: $grey;
   background: white;
-  font-family: 'proxima-nova','Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
