🚀 relaunch 2.0 - final final commit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>👋 hello – volkerotto.net</title>
-    <meta name="description" content="My name is Volker Otto and as a web industry professional with over 15 years of experience, I am currently serving as the CTO @ Digital Masters, where I lead the development of cutting-edge e-commerce and platform solutions for our clients." />
+    <title>👋 hello. – volkerotto.net</title>
+    <meta name="description" content="My name is Volker Otto and as a web industry professional with many years of experience, I am currently serving as the CTO @ Digital Masters, where I lead the development of cutting-edge e-commerce and platform solutions for our clients." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow" />
 
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html'}}" />
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/reset.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
     <link rel="shortcut icon" href="{{ site.url }}/favicon.ico"/>
