--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,53 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-
 :root {
   --yellow: #FAD722;
   --blue: rgba(89,195, 255, 1);
@@ -248,6 +198,7 @@ em {
   animation: spin infinite 80s linear reverse;
 }
 .lines.first-left {
+  display: none;
   width: 1111px;
   height: 1176px;
   max-width: 1111px;
@@ -257,6 +208,7 @@ em {
 }
 @media (min-width: 800px) {
   .lines.first-left {
+    display: block;
     top: 40vh;
     left: 0;
   }
@@ -393,6 +345,9 @@ em {
   }
 }
 
+.header {
+  padding: 20vh 0 5vh;
+}
 .header .header-text {
   position: relative;
   z-index: 1;
