💄 fixed some more css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,9 @@
     --black-50: var(--lightgrey);
   }
 }
+/**
+ * BASE
+ */
 *,
 *:before,
 *:after {
@@ -23,12 +26,12 @@
 
 html {
   scroll-behavior: smooth;
+  font-size: 20px;
 }
 
 body {
   margin: 0 auto;
   padding: 0;
-  font-size: 100%;
   line-height: 1.5;
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: var(--black);
@@ -43,11 +46,87 @@ body.dark {
   }
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+  border-bottom: 3px solid;
+  border-color: transparent;
+  transition: 0.1s ease;
+}
+a:hover, a:focus {
+  border-color: var(--yellow);
+  outline: none;
+}
+a:active {
+  border-color: var(--blue);
+}
+
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
+}
+
+sup {
+  vertical-align: super;
+  font-size: smaller;
+}
+
+.no-br {
+  white-space: nowrap;
+}
+
+/**
+ * ANIMATIONS
+ */
+@-webkit-keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+/**
+ * Structure
+ */
 .jail {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1000px;
+  max-width: 63rem;
   padding: 2rem;
 }
 @media (min-width: 800px) {
@@ -56,7 +135,7 @@ body.dark {
   }
 }
 .jail-big {
-  max-width: 1200px;
+  max-width: 74rem;
 }
 
 .px {
@@ -90,68 +169,6 @@ body.dark {
   }
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-  border-bottom: 3px solid;
-  border-color: transparent;
-  transition: 0.1s ease;
-}
-a:hover, a:focus {
-  border-color: var(--yellow);
-  outline: none;
-}
-a:active {
-  border-color: var(--blue);
-}
-
-strong {
-  font-weight: bold;
-}
-
-em {
-  font-style: italic;
-}
-
-@-webkit-keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
 .lines {
   position: absolute;
   z-index: 0;
@@ -313,13 +330,16 @@ em {
 
 .darkmode-toggle {
   position: fixed;
-  top: 5px;
-  left: 5px;
+  top: 0.25rem;
+  left: 0.25rem;
   z-index: 1;
   border-bottom: none;
   border-radius: 50%;
   border: 2px solid var(--lightgrey);
-  padding: 1rem;
+  padding: 0.5em;
+  font-size: 0.875rem;
+  line-height: 1;
+  text-align: center;
 }
 .dark .darkmode-toggle {
   border-color: var(--grey);
@@ -345,6 +365,9 @@ em {
   }
 }
 
+/**
+ * SECTIONS
+ */
 .header {
   padding: 20vh 0 5vh;
 }
@@ -490,8 +513,8 @@ dl dd {
   display: inline-block;
   margin-right: 1rem;
 }
-.social-links li svg {
-  fill: #fff;
+.social-links li img {
+  vertical-align: top;
 }
 
 .footer {
