--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,6 +24,11 @@ $fs-lead: 1.375rem;
 $fs: 1rem;
 $fs-tiny: 0.875rem;
 
+
+/**
+ * BASE
+ */
+
 *,
 *:before,
 *:after {
@@ -31,15 +36,15 @@ $fs-tiny: 0.875rem;
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
+    font-size: 20px;
 }
 
 body {
     margin: 0 auto;
     padding: 0;
-    font-size: 100%;
     line-height: 1.5;
-    font-family: Inter, sans-serif;
+    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: var(--black);
     overflow-x: hidden;
 
@@ -51,11 +56,76 @@ body {
     }
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+    border-bottom: 3px solid;
+    border-color: transparent;
+    transition: 0.1s ease;
+
+    &:hover,
+    &:focus {
+        border-color: var(--yellow);
+        outline: none;
+    }
+    &:active {
+        border-color: var(--blue);
+    }
+}
+
+strong {
+    font-weight: bold;
+}
+
+em {
+    font-style: italic;
+}
+
+sup {
+  vertical-align: super;
+  font-size: smaller;
+}
+
+.no-br {
+    white-space: nowrap;
+}
+
+
+/**
+ * ANIMATIONS
+ */
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+/**
+ * Structure
+ */
+
 .jail {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1000px;
+    max-width: 63rem;
     padding: 2rem;
 
     @media (min-width: 800px) {
@@ -63,7 +133,7 @@ body {
     }
 
     &-big {
-        max-width: 1200px;
+        max-width: 74rem;
     }
 }
 
@@ -95,52 +165,6 @@ body {
             padding-bottom: 3rem;
         }
     }
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-    border-bottom: 3px solid;
-    border-color: transparent;
-    transition: 0.1s ease;
-
-    &:hover,
-    &:focus {
-        border-color: var(--yellow);
-        outline: none;
-    }
-    &:active {
-        border-color: var(--blue);
-    }
-}
-
-strong {
-    font-weight: bold;
-}
-
-em {
-    font-style: italic;
-}
-
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
 }
 
 .lines {
@@ -175,8 +199,6 @@ em {
             }
         }
 
-
-
         .p1 {
             animation: spin infinite 120s linear;
         }
@@ -192,15 +214,16 @@ em {
     }
 
     &.first-left {
+        display: none;
         width: 1111px;
         height: 1176px;
         max-width: 1111px;
         max-height: 1176px;
-
         top: 50vh;
         left: -200px;
 
         @media (min-width: 800px){
+            display: block;
             top: 40vh;
             left: 0;
         }
@@ -319,13 +342,16 @@ em {
 
 .darkmode-toggle {
     position: fixed;
-    top: 5px;
-    left: 5px;
+    top: 0.25rem;
+    left: 0.25rem;
     z-index: 1;
     border-bottom: none;
     border-radius: 50%;
     border: 2px solid var(--lightgrey);
-    padding: 1rem;
+    padding: .5em;
+    font-size: 0.875rem;
+    line-height: 1;
+    text-align: center;
 
     .dark & {
         border-color: var(--grey);
@@ -350,7 +376,13 @@ em {
     }
 }
 
+
+/**
+ * SECTIONS
+ */
+
 .header {
+    padding: 20vh 0 5vh;
 
     .header-text {
         position: relative;
@@ -501,8 +533,8 @@ dl {
         display: inline-block;
         margin-right: 1rem;
 
-        svg {
-            fill: #fff;
+        img {
+            vertical-align: top;
         }
     }
 }
