--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,10 @@
 html {
   scroll-behavior: smooth;
   font-size: 20px;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 body {
@@ -177,8 +181,6 @@ sup {
 .lines.first-right {
   width: 1158px;
   height: 1329px;
-  max-width: 1158px;
-  max-height: 1329px;
   top: -600px;
   right: -160px;
 }
@@ -253,14 +255,16 @@ sup {
           animation: spin infinite 80s linear;
 }
 .lines.bottom {
+  display: none;
   width: 1034px;
   height: 792px;
-  top: -100px;
+  bottom: 0;
   left: 50%;
-  transform: translate(-50%, -60%);
+  transform: translate(-50%, -50%);
 }
 @media (min-width: 800px) {
   .lines.bottom {
+    display: block;
     top: 0;
   }
 }
