--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -38,6 +38,10 @@ $fs-tiny: 0.875rem;
 html {
     scroll-behavior: smooth;
     font-size: 20px;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 body {
@@ -171,12 +175,12 @@ sup {
     position: absolute;
     z-index: 0;
     pointer-events: none;
+    //max-width: 100%;
+    //max-height: 100%;
 
     &.first-right {
         width: 1158px;
         height: 1329px;
-        max-width: 1158px;
-        max-height: 1329px;
 
         top: -600px;
         right: -160px;
@@ -253,14 +257,16 @@ sup {
     }
 
     &.bottom {
+        display: none;
+
         width: 1034px;
         height: 792px;
-
-        top: -100px;
+        bottom: 0;
         left: 50%;
-        transform: translate(-50%, -60%);
+        transform: translate(-50%, -50%);
 
         @media (min-width: 800px){
+            display: block;
             top: 0;
         }
 
