--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,11 +10,6 @@
   --black-50: rgba(58, 58, 58, .5);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --black-50: var(--lightgrey);
-  }
-}
 /**
  * BASE
  */
@@ -22,6 +17,8 @@
 *:before,
 *:after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -34,12 +31,13 @@ html {
 }
 
 body {
+  position: relative;
+  height: auto;
   margin: 0 auto;
   padding: 0;
   line-height: 1.5;
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: var(--black);
-  overflow-x: hidden;
 }
 body.dark {
   background: #111;
@@ -373,6 +371,7 @@ sup {
  * SECTIONS
  */
 .header {
+  position: relative;
   padding: 20vh 0 5vh;
 }
 .header .header-text {
