--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,12 +10,6 @@
     --black-50: rgba(58, 58, 58, .5);
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --black-50: var(--lightgrey);
-    }
-}
-
 $border-width: 2px;
 $border-radius: 8px;
 
@@ -33,6 +27,8 @@ $fs-tiny: 0.875rem;
 *:before,
 *:after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -45,12 +41,13 @@ html {
 }
 
 body {
+    position: relative;
+    height: auto;
     margin: 0 auto;
     padding: 0;
     line-height: 1.5;
     font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: var(--black);
-    overflow-x: hidden;
 
     &.dark {
         background: #111;
@@ -388,6 +385,7 @@ sup {
  */
 
 .header {
+    position: relative;
     padding: 20vh 0 5vh;
 
     .header-text {
