--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -33,18 +33,29 @@ $fs-tiny: 0.875rem;
 
 html {
     scroll-behavior: smooth;
-    font-size: 20px;
-    height: 100vh;
-    width: 100vw;
+    font-size: 16px;
     overflow: hidden;
     overflow-y: auto;
+
+    @media (min-width: 500px){
+        font-size: 17px;
+    }
+    @media (min-width: 700px){
+        font-size: 18px;
+    }
+    @media (min-width: 800px){
+        font-size: 19px;
+    }
+    @media (min-width: 1000px){
+        font-size: 20px;
+    }
+    @media (min-width: 1200px){
+        font-size: 21px;
+    }
 }
 
 body {
-    position: relative;
-    height: auto;
     margin: 0 auto;
-    padding: 0;
     line-height: 1.5;
     font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: var(--black);
@@ -126,11 +137,19 @@ sup {
     position: relative;
     margin-left: auto;
     margin-right: auto;
+    width: 90%;
     max-width: 63rem;
     padding: 2rem;
 
     @media (min-width: 800px) {
-        padding: 5rem;
+        padding: 3rem;
+    }
+    @media (min-width: 1000px) {
+        padding: 4rem;
+    }
+    @media (min-width: 1200px) {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
     }
 
     &-big {
@@ -142,7 +161,7 @@ sup {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
 
-    @media (min-width: 800px) {
+    @media (min-width: 1000px) {
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
@@ -151,7 +170,7 @@ sup {
         padding-top: 1.25rem;
         padding-bottom: 1.25rem;
 
-        @media (min-width: 800px) {
+        @media (min-width: 1000px) {
             padding-top: 2rem;
             padding-bottom: 2rem;
         }
@@ -161,35 +180,40 @@ sup {
         padding-top: 2rem;
         padding-bottom: 2rem;
 
-        @media (min-width: 800px) {
+        @media (min-width: 1000px) {
             padding-top: 3rem;
             padding-bottom: 3rem;
         }
     }
 }
 
-.lines {
+.lines-mask {
     position: absolute;
     z-index: 0;
     pointer-events: none;
-    //max-width: 100%;
-    //max-height: 100%;
+    overflow: hidden;
+    width: 100%;
+    top: 0;
+    left: 0;
 
-    &.first-right {
-        width: 1158px;
-        height: 1329px;
-
-        top: -600px;
-        right: -160px;
-
-        @media (min-width: 800px){
-            top: -300px;
-            right: 0;
-        }
+    svg {
+        position: relative;
+        top: 0;
+        left: 0;
+        right: 0;
 
         path {
             transform-origin: 50% 50%;
+        }
+    }
 
+    &.first-right {
+        //max-width: 1329px;
+
+        @media (min-width: 1000px){
+        }
+
+        path {
             .dark &:not(.p3) {
                 stroke: var(--lightgrey);
             }
@@ -215,16 +239,10 @@ sup {
     }
 
     &.first-left {
-        display: none;
-        width: 1111px;
-        height: 1176px;
-        max-width: 1111px;
-        max-height: 1176px;
         top: 50vh;
         left: -200px;
 
-        @media (min-width: 800px){
-            display: block;
+        @media (min-width: 1000px){
             top: 40vh;
             left: 0;
         }
@@ -262,7 +280,7 @@ sup {
         left: 50%;
         transform: translate(-50%, -50%);
 
-        @media (min-width: 800px){
+        @media (min-width: 1000px){
             display: block;
             top: 0;
         }
@@ -374,6 +392,11 @@ sup {
     margin-bottom: 2.5rem;
 
     @media (min-width: 800px) {
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+    }
+
+    @media (min-width: 1000px) {
         margin-top: 4rem;
         margin-bottom: 4rem;
     }
