--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -207,12 +207,20 @@ sup {
         }
     }
 
+    .p1 {
+        animation: spin infinite 120s linear;
+    }
+    .p2 {
+        animation: spin infinite 220s linear;
+    }
+    .p3 {
+        animation: spin infinite 80s linear;
+    }
+    .p4 {
+        animation: spin infinite 80s linear reverse;
+    }
+
     &.first-right {
-        //max-width: 1329px;
-
-        @media (min-width: 1000px){
-        }
-
         path {
             .dark &:not(.p3) {
                 stroke: var(--lightgrey);
@@ -223,33 +231,12 @@ sup {
                 }
             }
         }
-
-        .p1 {
-            animation: spin infinite 120s linear;
-        }
-        .p2 {
-            animation: spin infinite 220s linear;
-        }
-        .p3 {
-            animation: spin infinite 80s linear;
-        }
-        .p4 {
-            animation: spin infinite 80s linear reverse;
-        }
     }
 
     &.first-left {
         top: 50vh;
-        left: -200px;
-
-        @media (min-width: 1000px){
-            top: 40vh;
-            left: 0;
-        }
 
         path {
-            transform-origin: 50% 50%;
-
             .dark &:not(.p2) {
                 stroke: var(--lightgrey);
             }
@@ -258,36 +245,17 @@ sup {
                     stroke: var(--lightgrey);
                 }
             }
-        }
-
-        .p1 {
-            animation: spin infinite 120s linear;
-        }
-        .p2 {
-            animation: spin infinite 220s linear reverse;
-        }
-        .p3 {
-            animation: spin infinite 80s linear;
         }
     }
 
     &.bottom {
-        display: none;
-
-        width: 1034px;
-        height: 792px;
+        top: auto;
         bottom: 0;
         left: 50%;
-        transform: translate(-50%, -50%);
-
-        @media (min-width: 1000px){
-            display: block;
-            top: 0;
-        }
+        transform: translateX(-50%);
+        max-width: 100%;
 
         path {
-            transform-origin: 50% 50%;
-
             .dark &:not(.p2) {
                 stroke: var(--lightgrey);
             }
@@ -296,16 +264,6 @@ sup {
                     stroke: var(--lightgrey);
                 }
             }
-        }
-
-        .p1 {
-            animation: spin infinite 120s linear;
-        }
-        .p2 {
-            animation: spin infinite 80s linear;
-        }
-        .p3 {
-            animation: spin infinite 120s linear reverse;
         }
 
         @media (prefers-reduced-motion) {
@@ -316,42 +274,52 @@ sup {
 
 .bg {
     position: absolute;
-    top: -2rem;
-    left: -1rem;
-    right: -1rem;
-    bottom: -2rem;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     z-index: -1;
     opacity: .9;
     transition: all .3s ease;
     border-radius: $border-radius;
 
-    @media (min-width: 800px) {
-        top: -2rem;
-        left: -2rem;
-        right: -2rem;
-        bottom: -2rem;
+    @media (min-width: 1200px) {
+        position: absolute;
+        top: -1rem;
+        left: -1rem;
+        right: -1rem;
+        bottom: -1rem;
     }
 
     &-lightgrey {
         background: var(--lightgrey);
-        transform: rotate(3deg);
+
+        @media (min-width: 1200px) {
+            transform: rotate(3deg);
+        }
     }
 
     &-blue {
         z-index: -2;
         background: var(--blue);
-        transform: rotate(-3deg);
+        @media (min-width: 1200px) {
+            transform: rotate(-3deg);
+        }
     }
 
     &-yellow {
         background: var(--yellow);
-        transform: rotate(3deg);
+        @media (min-width: 1200px) {
+            transform: rotate(3deg);
+        }
     }
 
     &-purple {
         z-index: -2;
         background: var(--purple);
-        transform: rotate(-3deg);
+        @media (min-width: 1200px) {
+            transform: rotate(-3deg);
+        }
     }
 }
 
@@ -569,5 +537,6 @@ dl {
 .footer {
     position: relative;
     text-align: center;
+    margin-bottom: 0;
     color: var(--white);
 }
