--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -584,24 +584,29 @@ body.dark .header p strong {
 }
 
 .header nav {
-  font-size: 1rem;
-  text-align: center;
-}
-
-@media (min-width: 1000px) {
-  .header nav {
-    text-align: left;
-  }
+  font-size: var(--fz);
+  line-height: 2;
 }
 
 .header nav p {
-  font-size: inherit;
+  font-size: var(--fz);
 }
 
 .header nav li {
-  display: inline-block;
-  margin-right: 1rem;
-  color: var(--black);
+  display: block;
+}
+
+@media (min-width: 500px) {
+  .header nav li {
+    display: inline-block;
+    margin-right: 0.5rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .header nav li {
+    margin-right: 1rem;
+  }
 }
 
 body.dark .header nav li {
